@@ -74,7 +74,6 @@ class MarbleModelPrivate
 
     MarbleModel         *m_parent;
 
-
     // View and paint stuff
     GeoSceneDocument    *m_mapTheme;
     LayerManager        m_layerManager;
@@ -92,6 +91,11 @@ class MarbleModelPrivate
     PlaceMarkManager      *m_placemarkmanager;
     MarblePlacemarkModel  *m_placemarkmodel;
     PlaceMarkLayout       *m_placeMarkLayout;
+
+    // Misc stuff.
+    SunLocator            *m_sunLocator;
+    MergedLayerDecorator  *m_layerDecorator;
+    ExtDateTime           *m_dateTime;
 
     // Selection handling
     QItemSelectionModel *m_placemarkselectionmodel;
@@ -163,18 +167,19 @@ MarbleModel::MarbleModel( QObject *parent )
     connect( d->m_fileviewmodel, SIGNAL( updateRegion( BoundingBox& ) ),
              this,               SIGNAL( regionChanged( BoundingBox& ) ) );
 
-    m_dateTime = new ExtDateTime();
-    m_sunLocator = new SunLocator(m_dateTime);
-    m_layerDecorator = new MergedLayerDecorator(m_sunLocator);
+    d->m_sunLocator     = new SunLocator( d->m_dateTime );
+    d->m_layerDecorator = new MergedLayerDecorator( d->m_sunLocator );
+    d->m_dateTime       = new ExtDateTime();
 
-    connect(m_dateTime, SIGNAL( timeChanged() ),
-            m_sunLocator, SLOT( update() ) );
-    connect( m_layerDecorator, SIGNAL( repaintMap() ),
-                               SIGNAL( modelChanged() ) );
+    connect(d->m_dateTime,   SIGNAL( timeChanged() ),
+            d->m_sunLocator, SLOT( update() ) );
+    connect( d->m_layerDecorator, SIGNAL( repaintMap() ),
+                                  SIGNAL( modelChanged() ) );
 
-    // TODO be able to set these somewhere
-    m_layerDecorator->setShowClouds(true);
-    m_layerDecorator->setShowTileId(false);
+    // Initialize some settings.
+    // FIXME: Be able to set these somewhere
+    d->m_layerDecorator->setShowClouds( true );
+    d->m_layerDecorator->setShowTileId( false );
 }
 
 MarbleModel::~MarbleModel()
@@ -396,7 +401,7 @@ void MarbleModel::setupTextureMapper( Projection projection )
         case Equirectangular:
             d->m_texmapper = new EquirectScanlineTextureMapper( d->m_tileLoader, this );
             break;
-        case Mercator:
+	case Mercator:
             d->m_texmapper = new MercatorScanlineTextureMapper( d->m_tileLoader, this );
             break;
     }
@@ -705,12 +710,12 @@ void MarbleModel::update()
 
 SunLocator* MarbleModel::sunLocator() const
 {
-    return m_sunLocator;
+    return d->m_sunLocator;
 }
 
 MergedLayerDecorator* MarbleModel::layerDecorator() const
 {
-    return m_layerDecorator;
+    return d->m_layerDecorator;
 }
 
 void MarbleModel::clearVolatileTileCache()
@@ -776,14 +781,14 @@ void MarbleModel::paintTile(TextureTile* tile, int x, int y, int level,
     qDebug() << "MarbleModel::paintTile: " << "x: " << x << "y:" << y << "level: " << level << "requestTileUpdate" << requestTileUpdate;
     
     if ( d->m_downloadManager != 0 ) {
-        connect( m_layerDecorator, SIGNAL( downloadTile( QUrl, QString, QString ) ),
+        connect( d->m_layerDecorator, SIGNAL( downloadTile( QUrl, QString, QString ) ),
                  d->m_downloadManager, SLOT( addJob( QUrl, QString, QString ) ) );
     }
 
-    m_layerDecorator->setInfo(x, y, level, tile->id());
-    m_layerDecorator->setTile(tile->tile());
+    d->m_layerDecorator->setInfo(x, y, level, tile->id());
+    d->m_layerDecorator->setTile(tile->tile());
         
-    m_layerDecorator->paint("maps/" + textureLayer->sourceDir(), mapTheme() );
+    d->m_layerDecorator->paint("maps/" + textureLayer->sourceDir(), mapTheme() );
     tile->loadTile(requestTileUpdate);
 }
 
